<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:transitionName="transitionLogin"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/img_login_backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backFromLogin"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logintittle"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/muli_black"
            android:textAllCaps="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp"
            android:background="@color/white">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/user"
                android:textSize="20dp"
                android:text="admin"
                android:id="@+id/txtUserName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:background="@color/white">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textSize="20dp"
                android:text="123"
                android:id="@+id/txtPassword"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:buttonTint="@color/black"
                android:text="Lưu đăng nhập"
                android:textColor="@color/black"
                android:checked="true"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:backgroundTint="@color/colorPrimary"
                android:text="Quên mật khẩu"
                android:textColor="@color/black" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_login_DangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/login"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>